--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - /data/db
 
   backend:
     build: ./backend
@@ -26,6 +26,3 @@ services:
       - "5174:80"
     depends_on:
       - backend
-
-volumes:
-  mongo-data:
