--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,8 @@
         "typescript": "^5.0.0",
         "vite": "^5.0.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "date-fns": "^4.1.0"
+    }
 }
