--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview"
     },
     "devDependencies": {
+        "@playwright/test": "^1.58.2",
         "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -21,8 +22,5 @@
         "typescript": "^5.0.0",
         "vite": "^5.0.0"
     },
-    "type": "module",
-    "dependencies": {
-        "date-fns": "^4.1.0"
-    }
+    "type": "module"
 }
