--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,16 @@ services:
       - "27017:27017"
 
   backend:
-    build: ./backend
+    image: mcr.microsoft.com/dotnet/sdk:8.0
     container_name: backend
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+    command: dotnet watch run
     ports:
       - "5000:8080"
     environment:
+      - ASPNETCORE_URLS=http://+:8080
       - ASPNETCORE_ENVIRONMENT=Development
       - MongoDB__ConnectionString=mongodb://mongo:27017
       - MongoDB__DatabaseName=CalendarDb
@@ -18,9 +23,16 @@ services:
       - mongo
 
   frontend:
-    build: ./frontend
+    image: node:20-alpine
     container_name: frontend
+    working_dir: /app
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_TARGET=http://backend:8080
+    command: sh -c "npm install && npm run dev -- --host"
     ports:
-      - "5174:80"
+      - "5174:5173"
     depends_on:
       - backend
