--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,27 @@
 {
-    "name": "frontend",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "vite dev",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "devDependencies": {
-        "@playwright/test": "^1.58.2",
-        "@sveltejs/adapter-static": "^3.0.0",
-        "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^3.0.0",
-        "autoprefixer": "^10.4.0",
-        "daisyui": "^4.0.0",
-        "postcss": "^8.4.0",
-        "svelte": "^4.0.0",
-        "svelte-check": "^3.0.0",
-        "tailwindcss": "^3.4.0",
-        "tslib": "^2.0.0",
-        "typescript": "^5.0.0",
-        "vite": "^5.0.0"
-    },
-    "type": "module"
+  "name": "frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.58.2",
+    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/node": "^25.2.3",
+    "autoprefixer": "^10.4.0",
+    "daisyui": "^4.0.0",
+    "postcss": "^8.4.0",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.0.0",
+    "tailwindcss": "^3.4.0",
+    "tslib": "^2.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
+  },
+  "type": "module"
 }
